[package]
name = "rnvtop"
version = "1.2.0"
description = "General Nvidia GPU monitoring"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
bytesize = "2.1.0"
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive"] }
colored_json = "5.0.0"
crossterm = "0.29.0"
nvml-wrapper = "0.11.0"
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tabled = "0.20.0"

## Test using hardware-query library which also uses nvml-wrapper if required
## But also supports Intel which would be quite helpful...
